--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "mocha": "^8.2.0",
     "nyc": "^15.1.0"
   },
   "dependencies": {
