--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "nyc node foo-workerpool.test.js",
-    "test-fork": "nyc node foo-fork.test.js"
+    "test": "nyc node test/foo-workerpool.spec.js",
+    "test-fork": "nyc node test/foo-fork.spec.js"
   },
   "keywords": [],
   "author": "",
